# opcore

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  ace.json  eslint.config.mjs  llms.txt  package-lock.json  package.json  rox.json  rust-toolchain.toml  tsconfig.base.json  tsconfig.json
.changeset/: README.md
.cmdproof/: profiles.toml
.github/: pull_request_template.md
crates/graph-core/: Cargo.toml
crates/graph-core/src/: artifact.rs  daemon.rs  lib.rs  main.rs  pipeline.rs  protocol.rs  query.rs  search.rs  store.rs  watch.rs
crates/graph-core/src/clone/: analysis.rs  mod.rs  persistence.rs  store.rs  tests.rs
crates/graph-core/src/daemon/: lifecycle.rs  query.rs  response.rs  session.rs  tests.rs  validation.rs
crates/graph-core/src/extraction/: diagnostics.rs  discovery.rs  facts.rs  ignore.rs  language.rs  mod.rs  parser.rs  python_imports.rs  tests.rs  tsconfig.rs
crates/graph-core/src/extraction/facts/: collector.rs  python.rs  rust.rs
crates/graph-core/src/extraction/rust/: collector.rs  manifest.rs  mod.rs
crates/graph-core/src/protocol/: daemon.rs  facts.rs  provider.rs  tests.rs
crates/graph-core/src/query/: changes.rs  common.rs  impact.rs  index.rs  selectors.rs  tests.rs
crates/graph-core/src/search/: dependents.rs  scoring.rs
crates/graph-core/src/store/: metadata.rs  read.rs  schema.rs  tests.rs  types.rs  write.rs
crates/graph-core/src/store/tests/: rust_fact_columns.rs
crates/graph-core/src/watch/: args.rs  session.rs
(+181 files in other folders)
